--- a/src/main/webapp/i18n/de/result.json
+++ b/src/main/webapp/i18n/de/result.json
@@ -46,7 +46,8 @@
             "notGraded": "Nicht bewertet",
             "preliminary": "(vorläufig)",
             "preliminaryTooltip": "Dein Ergebnis ist nicht endgültig. Nach der Einreichungsfrist werden weitere Tests durchgeführt.",
-            "noResultDetails": "Keine weiteren Informationen verfügbar für dieses Ergebnis."
+            "noResultDetails": "Keine weiteren Informationen verfügbar für dieses Ergebnis.",
+            "assessedTwice": "Zweitkorrigiert"
         }
     }
 }
